added formatting for form error

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   .form-formatting {
     @apply mt-1 w-full rounded-md border-gray-300 py-3 text-sm font-bold text-neutral-darkBlue shadow-sm placeholder:font-semibold focus:border-accent-blue focus:ring-1 focus:ring-accent-blue focus:ring-opacity-50 lg:px-5;
   }
+  .input-error {
+    @apply border-2 !border-primary-red focus:ring-1 focus:ring-primary-red;
+  }
 }
 
 :root {
